<resources>
    <string name="app_name">ChamaApp</string>
    <string name="default_notification_channel_id">Channel ID</string>
    <string name="intro">
        By having an account it is \n easier to see your details \n and those of the group
    </string>
    <string name="minimum_password">The password should be a minimum of 6 characters</string>
    <string name="auth_failed">Login failed please try again</string>
    <string name="title_activity_the_navigation_drawer">TheNavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="create_label">Click the send code button for a code to be sent to this phone number input it in the edit text box below
    </string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="welcome_text">Welcome to KWFT</string>
    <string name="button_send">Send code</string>
    <string name="button_resend">Resend code</string>
    <string name="enter_number">Enter the phone number</string>
    <string name="create_account">Create account with phonenumber</string>
    <string name="post">Post</string>
    <string name="leadership_id">Leadership ID</string>
    <string name="create_account_btn">Create Account</string>
    <string name="personal_information">Personal information</string>
    <string name="your_name">Your name</string>
    <string name="registered_phone_number">Registered phonenumber</string>
    <string name="phone_number">Phone number</string>
    <string name="todays_events">Todays events</string>
    <string name="upcoming_events">Upcoming events</string>
    <string name="No_activity">There is no activity happening today</string>
    <string name="enter_event_label">Enter a new event describing what is the  sole purpose  of the event</string>
    <string name="location">Search location</string>
    <string name="submit_event">Submit event</string>
    <string name="agenda">Agenda</string>
    <string name="hello">Hello : </string>
    <string name="my_details_label">This are the details of all the contributions</string>
    <string name="contributions">Contributions</string>
    <string name="months">Months</string>
    <string name="report_anomalies">Report anomalies</string>
    <string name="admin">Admin : </string>
    <string name="admin_label">Leads of the rest</string>
    <string name="number">Number</string>
    <string name="member">Member : </string>
    <string name="member_label">The ones led</string>
    <string name="details_label">Peoples contributions</string>
    <string name="message_hint">Enter new message</string>
    <string name="send_message">send</string>
    <string name="dialog_label">Edit members data</string>
    <string name="contribution_hint">Users contribution</string>
    <string name="month_hint">Contribution month</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="name_label">Your name</string>
    <string name="phonenumber_labek">Your phonenumber</string>
    <string name="my_Account_label">My account</string>
    <string name="events_label">Events</string>
    <string name="my_details_label_menu">My details</string>
    <string name="logout_label">Logout</string>
    <string name="all_details_label">All details</string>
    <string name="general_label">General</string>
    <string name="admin_only_label">Admin only</string>
    <string name="membership_id">Membership ID</string>
    <string name="final_step_of_creating_account">Final step of creating account</string>
    <string name="send_the_message">Send the message</string>
    <string name="enter_a_new_event">Enter a new event</string>
    <string name="open_add_event_activity">Open add event activity</string>
    <string name="send_code_to_enable_verification">Send code to enable verification</string>
    <string name="resend_code_to_enable_verification">Resend code to enable verification</string>
    <string name="report_of_information_not_being_correct">Report of information not being correct</string>
    <string name="create_account_with_your_phonenumber">Create account with your phonenumber</string>
    <string name="add_a_new_chat">Add a new chat</string>
    <string name="choose_a_new_image_as_your_profile_image">Choose a new image as your profile image</string>
    <string name="edit_your_current_profile_name">Edit your current profile name</string>
    <string name="make_changes_to_the_users_details">Make changes to the users details</string>
    <string name="cancel_making_changes">Cancel making changes</string>
    <string name="profile_image">profile image</string>
    <string name="send_money">Send Money</string>
</resources>
