<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/myaccount"
            android:title="@string/my_Account_label" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_event_available_black_24dp"
            android:title="@string/events_label" />
        <item
            android:id="@+id/nav_my_details"
            android:icon="@drawable/mydetailsicon"
            android:title="@string/my_details_label_menu" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout_label" />
        <item
            android:id="@+id/nav_all_members_details"
            android:icon="@drawable/editdetailsicon"
            android:title="@string/all_details_label" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_general_chat"
                android:icon="@drawable/generalchat"
                android:title="@string/general_label" />
            <item
                android:id="@+id/nav_admin_only"
                android:icon="@drawable/adminicon"
                android:title="@string/admin_only_label" />
        </menu>
    </item>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="Settings" />

            <item
                android:id="@+id/linda"
                android:icon="@drawable/ic_insert_emoticon_black_24dp"
                android:title="Linda"
                />

        </menu>

    </item>





</menu>
