<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="330dp">

    <TextView
         android:textStyle="italic|bold"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/dialog_label"
        android:textColor="#000"
        android:textSize="18dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/contribution_dialog"
        android:layout_marginTop="20dp"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:hint="@string/contribution_hint"
        android:textColor="#000"
        android:textSize="16dp"
        android:layout_gravity="center_horizontal"
        />
    <AutoCompleteTextView
        android:id="@+id/month_dialog"
        android:layout_gravity="center_horizontal"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:hint="@string/month_hint"
        android:textColor="#000"
        android:textSize="16dp"/>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp">

        <Button
            android:id="@+id/editbutton_dialog"
            android:layout_marginLeft="20dp"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:contentDescription="@string/make_changes_to_the_users_details"
            android:textColor="#fff"
            android:background="@drawable/button"/>
        <Button
            android:contentDescription="@string/cancel_making_changes"
            android:id="@+id/cancelbutton_dialog"
            android:layout_marginLeft="30dp"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:background="@drawable/button_transparent"/>
    </LinearLayout>
</LinearLayout>