<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/signup_admin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="W"
        android:background="@drawable/newlogo"
        android:textSize="120sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="80dp"
        android:id="@+id/logo"/>


    <EditText
        android:theme="@style/MyEditTextTheme"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content"
        android:layout_width="350dp"
        android:hint="@string/post"
        android:textColor="#000"
        android:textColorHint="#228B22"
        android:id="@+id/post"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/logo"/>

    <EditText
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/post"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:id="@+id/id"
        android:hint="@string/leadership_id"
        android:textColor="#000"
        android:theme="@style/MyEditTextTheme"
        android:textColorHint="#228B22"
        android:layout_marginTop="5dp"/>

    <Button
        android:layout_below="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:width="300dp"
        android:height="50dp"
        android:textAllCaps="false"
        android:text="@string/create_account_btn"
        android:textColor="#fff"
        android:textSize="20dp"
        android:background="@drawable/button"
        android:id="@+id/sign_up_button"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/final_step_of_creating_account"
        />

    <ProgressBar
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/sign_up_button"
        android:visibility="invisible"
    android:layout_marginTop="30dp"
    android:layout_marginLeft="150dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:theme="@style/MyEditTextTheme"
    android:id="@+id/progressBar"/>


</RelativeLayout>
