<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relative"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/linear"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todays_events"
            android:textSize="18dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold|italic"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_current_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="10dp"
            android:padding="6dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/no_activity"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:textSize="18dp"
            android:textColor="#000"
            android:background="@drawable/button_transparent"
            android:text="@string/No_activity"/>

        <View
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_events"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp"
            android:textStyle="bold|italic"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_upcoming_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</RelativeLayout>

